xcb: Fix segmentation fault on destruction of QXcbConnection

The same screen was detected twice.

Fixes: QTBUG-104319
Change-Id: Id1f93d68de0306604f2e6a9104962a1d3b0db366
Reviewed-by: Liang Qi <liang.qi@qt.io>
Reviewed-by: Jonas Kvinge <jonas@jkvinge.net>
(cherry picked from commit e39ca06dbc3051c8e82c458ccd7314a2adbff27e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>